fixed notelist aligning right

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ li {
 .mainContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   height: 100%;
 }
 
